<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_00"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_10"
        app:layout_constraintEnd_toStartOf="@+id/button_01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier4" />

    <Button
        android:id="@+id/button_01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_11"
        app:layout_constraintEnd_toStartOf="@+id/button_02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_00"
        app:layout_constraintTop_toTopOf="@id/barrier4" />

    <Button
        android:id="@+id/button_02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_01"
        app:layout_constraintTop_toBottomOf="@id/barrier4" />

    <Button
        android:id="@+id/button_20"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_21"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_10" />

    <Button
        android:id="@+id/button_10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_20"
        app:layout_constraintEnd_toStartOf="@+id/button_11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_00" />

    <Button
        android:id="@+id/button_11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_21"
        app:layout_constraintEnd_toStartOf="@+id/button_12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_10"
        app:layout_constraintTop_toBottomOf="@+id/button_01" />

    <Button
        android:id="@+id/button_12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_11"
        app:layout_constraintTop_toBottomOf="@+id/button_02" />

    <Button
        android:id="@+id/button_21"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_22"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_20"
        app:layout_constraintTop_toBottomOf="@+id/button_11" />

    <Button
        android:id="@+id/button_22"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:freezesText="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_21"
        app:layout_constraintTop_toBottomOf="@+id/button_12" />

    <TextView
        android:id="@+id/player1label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/player2label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/game_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_label"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/game_label" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="player1label,textView2,reset_btn,game_label"
        tools:layout_editor_absoluteY="715dp" />

    <TextView
        android:id="@+id/player1_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player2_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/player1label"
        app:layout_constraintTop_toTopOf="@+id/player1label" />

    <TextView
        android:id="@+id/game_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/zero"
        app:layout_constraintStart_toEndOf="@+id/game_label"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>